fix logout/signin btn overlap

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -14,24 +14,6 @@ nav {
     padding: 5px;
 }
 
-.nav-btn {
-    background-color: transparent;
-    border: 1px gray solid;
-    height: 30px;
-    width: 80px;
-    padding: 2px;
-    position: fixed;
-    right: 20px;
-    cursor: pointer;
-
-    a {
-        text-decoration: none;
-        color: white;
-        padding: 5px;
-        font-size: 16px;
-    }
-}
-
 .logo {
     display: flex;
     align-content: center;
@@ -64,21 +46,44 @@ nav {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-}
+    position: relative;
 
-.welcome {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    width: 260px;
-}
+    .upload-icon {
+        background: image-url('upload.png') center no-repeat;
+        background-size: 25px 25px;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+    }
 
-.upload-icon {
-    background: image-url('upload.png') center no-repeat;
-    background-size: 25px 25px;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
+    .welcome {
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        width: 260px;
+        flex-direction: row;
+
+        .welcome-header {
+            width: 55%;
+        }
+        
+        .right-nav-btn {
+            background-color: transparent;
+            border: 1px gray solid;
+            height: 30px;
+            width: 80px;
+            padding: 2px;
+            right: 20px;
+            cursor: pointer;
+
+            a {
+                text-decoration: none;
+                color: white;
+                padding: 5px;
+                font-size: 16px;
+            }
+        }
+    }
 }
 
 .side-nav{
